1.0.3 (trunk):
* Do not remove OPAM packages when doing `mirage clean` (#143)
* [xen] generate a simple main.xl, without block devices or network interfaces/
* The HTTP dependency now also installs `mirage-tcp-*`.
* Fix generated Makefile dependency on source OCaml files to rebuild reliably.
* Support `Fat_KV_RO` (a read-only k/v version of the FAT filesystem).

1.0.2 (2013-12-10):
* Add `HTTP` support.
* Fix `KV_RO` configuration for OPAM autoinstall.

1.0.1 (2013-12-09)
* Add more examples to the FAT filesystem test case.
* Fix `mirage-tcpip-*` support
* Fix `mirage-net-*` support

1.0.0 (2013-12-09):
* Adapt the latest library releases for Mirage 1.0 interfaces.

0.10.0 (2013-12.08):
* Complete API rewrite
* [xen] XL configuration phase is now created during configure phase, was during run phase.

0.9.7 (2013-08-09):
* Generate code that uses the `Ipaddr.V4` interface instead of `Nettypes`.

0.9.6 (2013-07-26):
* fix unix-direct by linking the unix package correctly (previously it was always dropped).

0.9.5 (2013-07-18):
* completely remove the dependency on obuild: use ocamlbuild everywhere now.
* adapt for mirage-0.9.3 OS.Netif interfaces (abstract type `id`).
* do not output network config when there are no `ip-*` lines in the `.conf` file.
* do not try to install `mirage-fs` if there is no filesystem to create.
* added `nat-script.sh` to setup xenbr0 with DNS, DHCP and masqerading under Linux.

0.9.4 (2013-07-09):
* build using ocamlbuild rather than depending on obuild.
* [xen] generate a symbol that can be used to produce stack traces with xenctx.
* mirari run --socket just runs the unikernel without any tuntap work.
* mirari run --xen creates a xl config file and runs `xl create -c unikernel.xl`.

0.9.3 (2013-06-12):
* Add a `--socket` flag to activate socket-based networking (UNIX only).
* Do not use OPAM compiler switches any more, as that's done in the packaging now.
* Use fd-passing in the UNIX backend to spawn a process.

0.9.2 (2013-03-28):