@@ -4,6 +4,7 @@
 * The HTTP dependency now also installs `mirage-tcp-*`.
 * Fix generated Makefile dependency on source OCaml files to rebuild reliably.
 * Support `Fat_KV_RO` (a read-only k/v version of the FAT filesystem).
+* The `KV_RO` filesystem in Unix now passes through to the underlying filesystem instead of calling `crunch`.
 
 1.0.2 (2013-12-10):
 * Add `HTTP` support.
